--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,15 @@
   		<artifactId>mongo-java-driver</artifactId>
   		<version>2.10.1</version>
   	</dependency>
+  	<dependency>
+  		<groupId>spark</groupId>
+  		<artifactId>spark</artifactId>
+  		<version>0.9.9.4-SNAPSHOT</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.freemarker</groupId>
+  		<artifactId>freemarker</artifactId>
+  		<version>2.3.20</version>
+  	</dependency>
   </dependencies>
 </project>
